# Game_testing

./: Cargo.toml
assets/config/sys/: display.ron
assets/config/ui/: menu.ron
config/sys/: display.ron
config/ui/: menu.ron
src/: main.rs
src/configuration/: conf.rs  mod.rs
src/configurator/configurator/: Cargo.toml
src/configurator/configurator/src/: configuration.rs  lib.rs
src/states/: menu.rs  mod.rs
src/states/menu/: menu.rs
