[package]
name = "configurator"
version = "0.1.0"
authors = ["CyberWolf <borel.loic.37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]

[dependencies]
log = "0.4"
time = "0.2.22"